// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Danger button should render a danger button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Danger button should render a danger button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Default Button should render a default button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Default Button should render a default button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Info button should render a info button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Info button should render a info button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Link button should render a link button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Link button should render a link button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Primary button should render a primary button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Primary button should render a primary button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Success button should render a success button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Success button should render a success button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Warning button should render a warning button 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={false}
  block={false}
  disabled={false}
  href=""
  onClick={[Function]}
  size="default"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;

exports[`<Button /> Warning button should render a warning button with different attributes from previous time 1`] = `
<ButtonStyled__ButtonDefaultStyled
  active={true}
  block={true}
  disabled={true}
  href=""
  onClick={[Function]}
  size="large"
  type="button"
>
  Some Awesome Text
</ButtonStyled__ButtonDefaultStyled>
`;
